--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
     <EditText
         android:id="@+id/divName"
         android:layout_width="159dp"
-        android:textColor="@color/white"
         android:layout_height="55dp"
         android:layout_marginTop="128dp"
         android:text="PCODDevice"
         android:textAlignment="textStart"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/hr"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,17 +54,26 @@
 
     <Button
         android:id="@+id/connectBut"
-        android:layout_width="164dp"
-        android:layout_height="52dp"
+        android:layout_width="152dp"
+        android:layout_height="54dp"
         android:text="Connect"
         android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/CamButton"
+        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
+        app:layout_constraintTop_toTopOf="@+id/CamButton" />
+
+    <Button
+        android:id="@+id/CamButton"
+        android:layout_width="150dp"
+        android:layout_height="57dp"
+        android:text="Camera Stream"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/hr"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
-        app:layout_constraintVertical_bias="0.611" />
+        app:layout_constraintStart_toEndOf="@+id/connectBut"
+        app:layout_constraintTop_toBottomOf="@+id/divName" />
 
     <Button
         android:id="@+id/tempBut"
@@ -83,8 +92,8 @@
         android:id="@+id/ambtemp"
         android:layout_width="160dp"
         android:layout_height="50dp"
-        android:textColor="@color/white"
         android:layout_marginBottom="92dp"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/tempBut"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,11 +132,11 @@
         android:layout_marginTop="349dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="31dp"
-        android:textColor="@color/white"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/heart_rate"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
         app:layout_constraintEnd_toStartOf="@+id/hr"
@@ -144,9 +153,9 @@
         android:layout_marginBottom="30dp"
         android:autofillHints=""
         android:ems="10"
-        android:textColor="@color/white"
         android:inputType="textPersonName"
         android:text="@string/tempreature"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
         app:layout_constraintEnd_toStartOf="@+id/temp"
@@ -162,10 +171,10 @@
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="92dp"
         android:autofillHints=""
-        android:textColor="@color/white"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/ambient_temp"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/ecgBut"
         app:layout_constraintEnd_toStartOf="@+id/ambtemp"
