--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,198 +7,216 @@
     android:padding="10dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/divName"
-        android:layout_width="159dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="128dp"
-        android:text="PCODDevice"
-        android:textAlignment="textStart"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/hr"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="166dp"
-        android:layout_height="37dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Enter Device Name"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/divName"
-        app:layout_constraintEnd_toStartOf="@+id/hr"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toTopOf="@+id/divName"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <Button
-        android:id="@+id/ecgBut"
-        android:layout_width="164dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="114dp"
-        android:text="@string/ecg"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tempBut"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
-
-    <Button
-        android:id="@+id/connectBut"
-        android:layout_width="152dp"
-        android:layout_height="54dp"
-        android:text="Connect"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/CamButton"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
-        app:layout_constraintTop_toTopOf="@+id/CamButton" />
-
-    <Button
-        android:id="@+id/CamButton"
-        android:layout_width="150dp"
-        android:layout_height="57dp"
-        android:text="Camera Stream"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/hr"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/connectBut"
-        app:layout_constraintTop_toBottomOf="@+id/divName" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/tempBut"
-        android:layout_width="167dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="114dp"
-        android:text="@string/temp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        <EditText
+            android:id="@+id/sendData"
+            android:layout_width="226dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:text="2"
+            android:textSize="14dp" />
+
+        <Button
+            android:id="@+id/send"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:minWidth="48dp"
+            android:text="Send" />
+    </LinearLayout>
+
+    <TableLayout
+        android:id="@+id/tableLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ecgBut"
-        app:layout_constraintTop_toBottomOf="@+id/ambtemp" />
-
-    <EditText
-        android:id="@+id/ambtemp"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="92dp"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/tempBut"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
-        app:layout_constraintTop_toBottomOf="@+id/temp" />
-
-    <EditText
-        android:id="@+id/temp"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="30dp"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/ambtemp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
-        app:layout_constraintTop_toBottomOf="@+id/hr" />
-
-    <EditText
-        android:id="@+id/hr"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="349dp"
-        android:layout_marginBottom="31dp"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/temp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="349dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="31dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/heart_rate"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
-        app:layout_constraintEnd_toStartOf="@+id/hr"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2">
 
-    <TextView
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="30dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/tempreature"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
-        app:layout_constraintEnd_toStartOf="@+id/temp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
-        tools:ignore="TouchTargetSizeCheck" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="92dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/ambient_temp"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/ecgBut"
-        app:layout_constraintEnd_toStartOf="@+id/ambtemp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
-        tools:ignore="TouchTargetSizeCheck" />
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="editTextTextPersonName3,editTextTextPersonName,ambtemp,hr,temp,editTextTextPersonName2"
-        app:layout_constraintBottom_toTopOf="@+id/group2"
-        app:layout_constraintEnd_toStartOf="@+id/group2"
-        app:layout_constraintStart_toStartOf="@+id/group2"
-        app:layout_constraintTop_toTopOf="@+id/group2" />
+            <TextView
+                android:id="@+id/deviceName"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Enter Device Name: "
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                tools:ignore="TouchTargetSizeCheck" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        app:constraint_referenced_ids="editTextTextPersonName3,editTextTextPersonName,ambtemp,hr,temp,editTextTextPersonName2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <EditText
+                android:id="@+id/divName"
+                android:layout_width="159dp"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:text="HC-05"
+                android:textAlignment="textStart"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/connectBut"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:text="Connect"
+                android:textAlignment="center"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/CamButton"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:text="Cam Strm"
+                android:textAlignment="center"
+                android:textSize="16sp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/editTextTextPersonName"
+                android:layout_width="160dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="@string/heart_rate"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/hr"
+                android:layout_width="160dp"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                tools:ignore="SpeakableTextPresentCheck" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/editTextTextPersonName2"
+                android:layout_width="160dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="@string/tempreature"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/temp"
+                android:layout_width="160dp"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:textSize="20sp"
+                tools:ignore="SpeakableTextPresentCheck" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/editTextTextPersonName3"
+                android:layout_width="160dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:autofillHints=""
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="@string/ambient_temp"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/ambtemp"
+                android:layout_width="160dp"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/ecgBut"
+                android:layout_width="182dp"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:text="@string/ecg"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/tempBut"
+                android:layout_width="172dp"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:text="@string/temp"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+        </TableRow>
+
+    </TableLayout>
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="109dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        tools:layout_editor_absoluteX="10dp">
+
+        <TextView
+            android:id="@+id/recieveData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
