--- a/app/src/main/res/layout/activity_ecgchart.xml
+++ b/app/src/main/res/layout/activity_ecgchart.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+  <Button
+      android:id="@+id/button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Button" />
+
   <com.github.mikephil.charting.charts.LineChart
       android:id="@+id/linechart"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"></com.github.mikephil.charting.charts.LineChart>
+      android:layout_height="match_parent">
+
+  </com.github.mikephil.charting.charts.LineChart>
 
 </RelativeLayout>
