--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,10 @@
             android:layout_marginStart="44dp"
             android:layout_marginTop="20dp"
             android:layout_weight="1"
-            android:text="2"
-            android:textSize="14dp" />
+            android:autofillHints=""
+            android:inputType="text"
+            android:text="@string/_2"
+            android:textSize="14sp" />
 
         <Button
             android:id="@+id/send"
@@ -32,7 +34,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:minWidth="48dp"
-            android:text="Send" />
+            android:text="@string/send" />
     </LinearLayout>
 
     <TableLayout
@@ -42,10 +44,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
 
         <TableRow
             android:layout_width="wrap_content"
@@ -58,7 +56,7 @@
                 android:autofillHints=""
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Enter Device Name: "
+                android:text="@string/enter_device_name"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 tools:ignore="TouchTargetSizeCheck" />
@@ -68,7 +66,9 @@
                 android:layout_width="159dp"
                 android:layout_height="75dp"
                 android:layout_weight="3"
-                android:text="HC-05"
+                android:autofillHints=""
+                android:inputType="text"
+                android:text="@string/hc_05"
                 android:textAlignment="textStart"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
@@ -83,18 +83,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:layout_weight="3"
-                android:text="Connect"
+                android:text="@string/connect"
                 android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                style="?android:attr/buttonBarButtonStyle" />
 
             <Button
                 android:id="@+id/CamButton"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:layout_weight="3"
-                android:text="Cam Strm"
+                android:text="@string/cam_strm"
                 android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                style="?android:attr/buttonBarButtonStyle" />
 
         </TableRow>
 
@@ -119,6 +121,8 @@
                 android:layout_width="160dp"
                 android:layout_height="75dp"
                 android:layout_weight="3"
+                android:autofillHints=""
+                android:inputType="number"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -145,6 +149,8 @@
                 android:layout_width="160dp"
                 android:layout_height="75dp"
                 android:layout_weight="3"
+                android:autofillHints=""
+                android:inputType="text"
                 android:textSize="20sp"
                 tools:ignore="SpeakableTextPresentCheck" />
         </TableRow>
@@ -170,6 +176,8 @@
                 android:layout_width="160dp"
                 android:layout_height="75dp"
                 android:layout_weight="3"
+                android:autofillHints=""
+                android:inputType="text"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -187,7 +195,8 @@
                 android:layout_weight="3"
                 android:text="@string/ecg"
                 android:textAlignment="center"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                style="?android:attr/buttonBarButtonStyle" />
 
             <Button
                 android:id="@+id/tempBut"
@@ -196,7 +205,19 @@
                 android:layout_weight="3"
                 android:text="@string/temp"
                 android:textAlignment="center"
+                android:textSize="20sp"
+                style="?android:attr/buttonBarButtonStyle" />
+
+            <Button
+                android:id="@+id/ppgBut"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="182dp"
+                android:layout_height="75dp"
+                android:layout_weight="3"
+                android:text="@string/ppg"
+                android:textAlignment="center"
                 android:textSize="20sp" />
+
         </TableRow>
 
     </TableLayout>
